--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">Project details</a></li>
+          <li><a class="nav-link scrollto" href="#about">Project Details</a></li>
           <li><a class="nav-link scrollto" href="#cad">Cad Designs </a></li>
-          <li><a class="nav-link scrollto" href="#research_report">Research report</a></li>
+          <li><a class="nav-link scrollto" href="#research_report">Research Report</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
-           
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
       <!-- .navbar -->
